--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,7 @@
 version: 2.1
 
 orbs:
-  cypress: cypress-io/cypress@3
+  browser-tools: circleci/browser-tools@1
 
 jobs:
   Sample-01:
@@ -21,10 +21,8 @@ jobs:
             - ~/.cache
       - run: npm run build
       - run: npm test
-      - cypress/run:
-          cypress-command: npx cypress run --browser chrome
-          install-browsers: true
-          start-command: npm run start
+      - browser-tools/install-chrome
+      - run: npm run test:integration
       - store_test_results:
           path: test-results
       - store_artifacts:
