Use Chrome by default

--- a/Sample-01/package.json
+++ b/Sample-01/package.json
@@ -10,8 +10,8 @@
     "start:api": "node api-server",
     "test": "jest tests --coverage --maxWorkers=10",
     "test:watch": "jest --coverage --watch",
-    "test:integration": "start-server-and-test start http-get://localhost:3000 cypress:run",
-    "test:integration:watch": "start-server-and-test start http-get://localhost:3000 cypress:open",
+    "test:integration": "start-server-and-test start http-get://localhost:3000 cypress:run --browser chrome",
+    "test:integration:watch": "start-server-and-test start http-get://localhost:3000 cypress:open --browser chrome",
     "cypress:run": "cypress run",
     "cypress:open": "cypress open"
   },
