Fix npm scripts

--- a/Sample-01/package.json
+++ b/Sample-01/package.json
@@ -10,10 +10,10 @@
     "start:api": "node api-server",
     "test": "jest tests --coverage --maxWorkers=10",
     "test:watch": "jest --coverage --watch",
-    "test:integration": "start-server-and-test start http-get://localhost:3000 cypress:run --browser chrome",
-    "test:integration:watch": "start-server-and-test start http-get://localhost:3000 cypress:open --browser chrome",
-    "cypress:run": "cypress run",
-    "cypress:open": "cypress open"
+    "test:integration": "start-server-and-test start http-get://localhost:3000 cypress:run",
+    "test:integration:watch": "start-server-and-test start http-get://localhost:3000 cypress:open",
+    "cypress:run": "cypress run --browser chrome",
+    "cypress:open": "cypress open --browser chrome"
   },
   "dependencies": {
     "@auth0/nextjs-auth0": "^2.0.0",
