--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,10 +1,13 @@
 version: 2.1
 
+orbs:
+  browser-tools: circleci/browser-tools@1
+
 jobs:
   Sample-01:
     working_directory: ~/samples/Sample-01
     docker:
-      - image: circleci/node:lts-browsers
+      - image: cimg/node:lts-browsers
     steps:
       - checkout:
           path: ~/samples
@@ -18,6 +21,7 @@ jobs:
             - ~/.cache
       - run: npm run build
       - run: npm test
+      - browser-tools/install-chrome
       - run: npm run test:integration
       - store_test_results:
           path: test-results
