Update to use the app router

--- a/Sample-01/package.json
+++ b/Sample-01/package.json
@@ -16,7 +16,7 @@
     "cypress:open": "cypress open --browser chrome"
   },
   "dependencies": {
-    "@auth0/nextjs-auth0": "^3.0.0",
+    "@auth0/nextjs-auth0": "^3.1.0",
     "@fortawesome/fontawesome-svg-core": "^6.2.1",
     "@fortawesome/free-solid-svg-icons": "^6.2.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
@@ -29,10 +29,10 @@
     "highlight.js": "^11.7.0",
     "jwks-rsa": "^3.0.0",
     "morgan": "^1.10.0",
-    "next": "^13.1.0",
+    "next": "^13.4.19",
     "nodemon": "^3.0.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "reactstrap": "^9.1.5"
   },
   "devDependencies": {
