--- a/Sample-01/package.json
+++ b/Sample-01/package.json
@@ -16,37 +16,46 @@
     "cypress:open": "cypress open --browser chrome"
   },
   "dependencies": {
-    "@auth0/nextjs-auth0": "^3.5.0",
-    "@fortawesome/fontawesome-svg-core": "^6.5.0",
-    "@fortawesome/free-solid-svg-icons": "^6.5.0",
-    "@fortawesome/react-fontawesome": "^0.2.0",
-    "concurrently": "^8.2.0",
+    "@auth0/nextjs-auth0": "^4.2.1",
+    "@babel/runtime": "^7.26.10",
+    "@fortawesome/fontawesome-svg-core": "^6.7.2",
+    "@fortawesome/free-solid-svg-icons": "^6.7.2",
+    "@fortawesome/react-fontawesome": "^0.2.2",
+    "body-parser": "^1.20.3",
+    "concurrently": "^8.2.2",
+    "cookie": "^1.0.2",
     "cors": "^2.8.5",
-    "dotenv": "^16.0.3",
-    "express": "^4.18.2",
-    "express-jwt": "^8.0",
-    "helmet": "^7.1.0",
-    "highlight.js": "^11.9.0",
-    "jwks-rsa": "^3.1.0",
+    "cross-spawn": "^7.0.6",
+    "dotenv": "^16.4.7",
+    "express": "^4.21.2",
+    "express-jwt": "^8.5.1",
+    "helmet": "^7.2.0",
+    "highlight.js": "^11.11.1",
+    "jwks-rsa": "^3.2.0",
+    "micromatch": "^4.0.8",
     "morgan": "^1.10.0",
-    "next": "^13.5.1",
-    "nodemon": "^3.0.0",
+    "next": "^15.2.3",
+    "nodemon": "^3.1.9",
+    "path-to-regexp": "^8.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "reactstrap": "^9.1.5"
+    "reactstrap": "^9.2.3",
+    "send": "^1.1.0",
+    "serve-static": "^1.16.2",
+    "ws": "^8.18.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.23.0",
-    "@testing-library/dom": "^9.0.1",
-    "@testing-library/jest-dom": "^5.16.5",
+    "@babel/core": "^7.26.10",
+    "@testing-library/dom": "^10.4.0",
+    "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^14.1.0",
     "babel-jest": "^29.7.0",
-    "cypress": "^12.7.0",
+    "cypress": "^14.2.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
-    "prettier": "^3.1.0",
-    "start-server-and-test": "^2.0.0"
+    "prettier": "^3.5.3",
+    "start-server-and-test": "^2.0.11"
   },
   "jest": {
     "testEnvironment": "jsdom",
