--- a/Sample-01/package.json
+++ b/Sample-01/package.json
@@ -3,10 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "concurrently \"next dev\" \"node api-server\"",
+    "dev": "next dev",
     "dev:api": "nodemon api-server",
     "build": "next build",
-    "start": "concurrently \"next start\" \"node api-server\"",
+    "start": "next start",
     "start:api": "node api-server",
     "test": "jest tests --coverage --maxWorkers=10",
     "test:watch": "jest --coverage --watch",
@@ -16,7 +16,7 @@
     "cypress:open": "cypress open --browser chrome"
   },
   "dependencies": {
-    "@auth0/nextjs-auth0": "^4.2.1",
+    "@auth0/nextjs-auth0": "^3.0.0-alpha.0",
     "@babel/runtime": "^7.26.10",
     "@fortawesome/fontawesome-svg-core": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
@@ -34,53 +34,29 @@
     "jwks-rsa": "^3.2.0",
     "micromatch": "^4.0.8",
     "morgan": "^1.10.0",
-    "next": "^15.2.3",
+    "next": "12.3.1",
     "nodemon": "^3.1.9",
     "path-to-regexp": "^8.2.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "reactstrap": "^9.2.3",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-router-dom": "^6.11.1",
+    "reactstrap": "^9.1.10",
     "send": "^1.1.0",
     "serve-static": "^1.16.2",
-    "ws": "^8.18.1"
+    "ws": "^8.18.1",
+    "bootstrap": "^5.2.3"
   },
   "devDependencies": {
     "@babel/core": "^7.26.10",
     "@testing-library/dom": "^10.4.0",
-    "@testing-library/jest-dom": "^6.6.3",
-    "@testing-library/react": "^14.1.0",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^14.0.0",
     "babel-jest": "^29.7.0",
     "cypress": "^14.2.0",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^29.7.0",
-    "jest-environment-jsdom": "^29.7.0",
+    "jest": "^29.5.0",
+    "jest-environment-jsdom": "^29.5.0",
     "prettier": "^3.5.3",
     "start-server-and-test": "^2.0.11"
-  },
-  "jest": {
-    "testEnvironment": "jsdom",
-    "rootDir": "./",
-    "moduleNameMapper": {
-      ".(css)$": "identity-obj-proxy"
-    },
-    "moduleFileExtensions": [
-      "js",
-      "jsx"
-    ],
-    "setupFiles": [
-      "./tests/environment.js"
-    ],
-    "setupFilesAfterEnv": [
-      "./tests/setup.js"
-    ],
-    "collectCoverageFrom": [
-      "components/**/*.*",
-      "pages/**/*.*"
-    ],
-    "coverageReporters": [
-      "lcov",
-      "text",
-      "text-summary"
-    ]
   }
 }
