--- a/Sample-01/package.json
+++ b/Sample-01/package.json
@@ -3,10 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+      "dev": "concurrently \"next dev\" \"nodemon api-server\"",
     "dev:api": "nodemon api-server",
     "build": "next build",
-    "start": "next start",
+    "start": "concurrently \"next start\" \"node api-server\"",
     "start:api": "node api-server",
     "test": "jest tests --coverage --maxWorkers=10",
     "test:watch": "jest --coverage --watch",
@@ -22,6 +22,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "body-parser": "^1.20.3",
+    "bootstrap": "^5.3.3",
     "concurrently": "^8.2.2",
     "cookie": "^1.0.2",
     "cors": "^2.8.5",
@@ -34,28 +35,27 @@
     "jwks-rsa": "^3.2.0",
     "micromatch": "^4.0.8",
     "morgan": "^1.10.0",
-    "next": "12.3.1",
+    "next": "^15.0.0",
     "nodemon": "^3.1.9",
     "path-to-regexp": "^8.2.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-router-dom": "^6.11.1",
-    "reactstrap": "^9.1.10",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.22.3",
+    "reactstrap": "^9.2.2",
     "send": "^1.1.0",
     "serve-static": "^1.16.2",
-    "ws": "^8.18.1",
-    "bootstrap": "^5.2.3"
+    "ws": "^8.18.1"
   },
   "devDependencies": {
     "@babel/core": "^7.26.10",
     "@testing-library/dom": "^10.4.0",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^14.0.0",
+    "@testing-library/jest-dom": "^6.4.2",
+    "@testing-library/react": "^14.2.1",
     "babel-jest": "^29.7.0",
     "cypress": "^14.2.0",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^29.5.0",
-    "jest-environment-jsdom": "^29.5.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "prettier": "^3.5.3",
     "start-server-and-test": "^2.0.11"
   }
