--- a/Sample-01/package.json
+++ b/Sample-01/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-      "dev": "concurrently \"next dev\" \"nodemon api-server\"",
+    "dev": "concurrently \"next dev\" \"nodemon api-server\"",
     "dev:api": "nodemon api-server",
     "build": "next build",
     "start": "concurrently \"next start\" \"node api-server\"",
@@ -48,6 +48,9 @@
   },
   "devDependencies": {
     "@babel/core": "^7.26.10",
+    "@babel/preset-env": "^7.26.9",
+    "@babel/preset-react": "^7.26.3",
+    "@babel/preset-typescript": "^7.27.0",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.4.2",
     "@testing-library/react": "^14.2.1",
