--- a/Sample-01/package.json
+++ b/Sample-01/package.json
@@ -29,10 +29,10 @@
     "highlight.js": "^11.9.0",
     "jwks-rsa": "^3.1.0",
     "morgan": "^1.10.0",
-    "next": "^14.2.26",
+    "next": "15.2.4",
     "nodemon": "^3.0.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
     "reactstrap": "^9.1.5"
   },
   "devDependencies": {
@@ -42,7 +42,7 @@
     "@testing-library/react": "^14.1.0",
     "babel-jest": "^29.7.0",
     "cypress": "^12.7.0",
-    "eslint-config-next": "^14.2.26",
+    "eslint-config-next": "15.2.4",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
