--- a/Sample-01/package.json
+++ b/Sample-01/package.json
@@ -17,9 +17,9 @@
   },
   "dependencies": {
     "@auth0/nextjs-auth0": "^3.5.0",
-    "@fortawesome/fontawesome-svg-core": "^6.5.0",
-    "@fortawesome/free-solid-svg-icons": "^6.5.0",
-    "@fortawesome/react-fontawesome": "^0.2.0",
+    "@fortawesome/fontawesome-svg-core": "^6.7.2",
+    "@fortawesome/free-solid-svg-icons": "^6.7.2",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "concurrently": "^8.2.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
@@ -29,19 +29,20 @@
     "highlight.js": "^11.9.0",
     "jwks-rsa": "^3.1.0",
     "morgan": "^1.10.0",
-    "next": "^13.5.1",
+    "next": "15.2.4",
     "nodemon": "^3.0.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
     "reactstrap": "^9.1.5"
   },
   "devDependencies": {
     "@babel/core": "^7.23.0",
-    "@testing-library/dom": "^9.0.1",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^14.1.0",
+    "@testing-library/dom": "^10.4.0",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.2.0",
     "babel-jest": "^29.7.0",
     "cypress": "^12.7.0",
+    "eslint-config-next": "15.2.4",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
