--- a/Sample-01/.env.local.example
+++ b/Sample-01/.env.local.example
@@ -1,6 +1,6 @@
 AUTH0_SECRET=replace-with-your-own-secret-generated-with-openssl
-AUTH0_BASE_URL=http://localhost:3000
-AUTH0_ISSUER_BASE_URL='https://{DOMAIN}'
+APP_BASE_URL=http://localhost:3000
+AUTH0_DOMAIN='{DOMAIN}'
 AUTH0_CLIENT_ID='{CLIENT_ID}'
 AUTH0_CLIENT_SECRET='{CLIENT_SECRET}'
 AUTH0_AUDIENCE=
